--- a/public/assignment5/client/views/admin/admin.view.html
+++ b/public/assignment5/client/views/admin/admin.view.html
@@ -5,11 +5,29 @@
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
-                <th><span class="caret"></span> Username</th>
+                <th ng-click="model.order('username')">
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"
+                          ng-show="(model.predicate == 'username') && (model.reverse == true)"></span>
+                    <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"
+                          ng-show="(model.predicate == 'username') && (model.reverse == false)"></span>
+                    Username
+                </th>
                 <th>Password</th>
-                <th><span class="caret"></span> FirstName</th>
-                <th><span class="caret"></span> LastName</th>
-                <th><span class="caret"></span> Roles</th>
+                <th ng-click="model.order('firstName')">
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"
+                          ng-show="(model.predicate == 'firstName') && (model.reverse == true)"></span>
+                    <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"
+                          ng-show="(model.predicate == 'firstName') && (model.reverse == false)"></span>
+                    FirstName
+                </th>
+                <th ng-click="model.order('lastName')">
+                    <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"
+                          ng-show="(model.predicate == 'lastName') && (model.reverse == true)"></span>
+                    <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"
+                          ng-show="(model.predicate == 'lastName') && (model.reverse == false)"></span>
+                    LastName
+                </th>
+                <th>Roles</th>
                 <th>Actions</th>
             </tr>
             </thead>
@@ -46,23 +64,35 @@
                                 placeholder="roles"/>
                     </td>
                     <td>
-                        <button ng-click="model.addUser(model.user)"
-                                class="btn btn-sm btn-success">Add</button>
-                        <button ng-click="model.updateUser(model.user)"
-                                class="btn btn-sm btn-primary">Update</button>
+                        <!--<button ng-click="model.addUser(model.user)"-->
+                                <!--class="btn btn-sm btn-success">Add</button>-->
+                        <!--<button ng-click="model.updateUser(model.user)"-->
+                                <!--class="btn btn-sm btn-primary">Update</button>-->
+                        <a href="" ng-click="model.addUser(model.user)">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" ng-click="model.updateUser(model.user)">
+                            <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span>
+                        </a>
                     </td>
                 </tr>
-                <tr ng-repeat="user in model.users">
+                <tr ng-repeat="user in model.users | orderBy:model.predicate:model.reverse">
                     <td>{{user.username}}</td>
                     <td>*****</td>
                     <td>{{user.firstName}}</td>
                     <td>{{user.lastName}}</td>
                     <td>{{user.roles}}</td>
                     <td>
-                        <button ng-click="model.deleteUser($index)"
-                                class="btn btn-sm btn-danger">Delete</button>
-                        <button ng-click="model.selectUser($index)"
-                                class="btn btn-sm btn-info">Select</button>
+                        <!--<button ng-click="model.deleteUser($index)"-->
+                                <!--class="btn btn-sm btn-danger">Delete</button>-->
+                        <!--<button ng-click="model.selectUser($index)"-->
+                                <!--class="btn btn-sm btn-info">Select</button>-->
+                        <a href="" ng-click="model.deleteUser($index)">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" ng-click="model.selectUser($index)">
+                            <span class="glyphicon glyphicon-cog pull-right" aria-hidden="true"></span>
+                        </a>
                     </td>
                 </tr>
             </tbody>
