--- a/public/project-next/client/views/header/header.view.html
+++ b/public/project-next/client/views/header/header.view.html
@@ -8,14 +8,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <li ng-if="currentUser">
-                <a class="navbar-brand margin-set" href="#/searchhome">Eat'n'Review</a>
-            </li>
-            <li ng-if="!currentUser">
-                <a class="navbar-brand margin-set" href="#/home">Eat'n'Review</a>
-            </li>
+            <a class="navbar-brand"
+               ng-click="headerControllerModel.toggleMenu()"
+               ng-if="isProfile">
+                <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+            </a>
+            <a ng-if="currentUser" class="navbar-brand margin-set" href="#/searchhome">Eat'n'Review</a>
+            <a ng-if="!currentUser" class="navbar-brand margin-set" href="#/home">Eat'n'Review</a>
         </div>
-        <div ng-hide ="headerControllerModel.$location.url() == '/home' ||
+        <div ng-hide="headerControllerModel.$location.url() == '/home' ||
                        headerControllerModel.$location.url() == '/admin/user' ||
                        headerControllerModel.$location.url() == '/searchhome'"
              class="hidden-sm hidden-xs">
@@ -40,10 +41,10 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right margin-set1">
                 <!--<li ng-if="currentUser">-->
-                    <!--<a href="#/searchhome" class="margin-set2">Home</a>-->
+                <!--<a href="#/searchhome" class="margin-set2">Home</a>-->
                 <!--</li>-->
                 <li ng-show="headerControllerModel.$location.url() == '/searchhome'&& currentUser.role == 'Admin'">
-                   <a href="#/admin/user" class="margin-set2">Admin</a>
+                    <a href="#/admin/user" class="margin-set2">Admin</a>
                 </li>
                 <li ng-hide="currentUser">
                     <a href="#/register" class="margin-set2">Sign Up</a>
