--- a/public/project-next/client/css/style.css
+++ b/public/project-next/client/css/style.css
@@ -12,6 +12,9 @@ body {
     color: #5a5a5a;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
+    font-family: fantasy;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -46,6 +49,10 @@ body {
     margin-left: 60px;
 }
 
+.no-margin-left{
+    margin-left: 0;
+}
+
 .carousel .item {
     height: 500px;
     background-color:#bbb;
@@ -63,6 +70,7 @@ body {
     /*margin: auto;*/
 /*}*/
 
+
 #searchForm {
     position:absolute;
     top:40%;
@@ -71,7 +79,7 @@ body {
 
 .searchbox{
     position: absolute;
-    top: 200px;
+    top: 230px;
     z-index: 1
 }
 .container-fluid-carousel {
@@ -101,6 +109,10 @@ body {
     margin-left : 15px;
     margin-right:15px;
 }
+.marg-top{
+    margin-top: -30px;
+}
+
 /*!
  * Start Bootstrap - Portfolio Item HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
@@ -283,6 +295,17 @@ footer {
         margin-left: 5px;
     }
 
+    .find-btn{
+        margin-top: 5px;
+    }
+    .auto-size{
+        height: 30px;
+        padding: 5px 10px;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 3px;
+    }
+
 }
 
 
@@ -303,6 +326,9 @@ footer {
     .margin-set2{
         margin-left: 5px;
     }
+    .font-s{
+        font-size: 23px;
+    }
 }
 
 @media only screen and (max-width: 1200px){
@@ -319,6 +345,16 @@ footer {
     .home-pad{
         padding-left: 160px;
     }
+    .auto-size{
+        height: 40px;
+        padding: 10px 16px;
+        font-size: 17px;
+        line-height: 1.1;
+        border-radius: 6px;
+    }
+    .font-s{
+        font-size: 27px;
+    }
 }
 
 @media only screen and (min-width: 767px) and (max-width: 992px) {
@@ -331,4 +367,25 @@ footer {
         margin-left: -3px;
     }
 
+    .auto-size{
+        height: 40px;
+        padding: 10px 16px;
+        font-size: 17px;
+        line-height: 1.1;
+        border-radius: 6px;
+    }
+
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .auto-size{
+        height: 40px;
+        padding: 10px 16px;
+        font-size: 17px;
+        line-height: 1.1;
+        border-radius: 6px;
+    }
+    .font-s{
+        font-size: 27px;
+    }
 }
