--- a/public/project-next/client/views/search/searchhome.view.html
+++ b/public/project-next/client/views/search/searchhome.view.html
@@ -3,7 +3,7 @@
         <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
             <div class="col-sm-5 col-md-5">
                 <input ng-model="searchControllerModel.restname"
-                       type="text" class="form-control margin-searchbox"
+                       type="text" class="form-control margin-searchbox auto-size"
                        placeholder="Food (optional)"/>
             </div>
             <div class="col-sm-5 col-md-5">
@@ -14,13 +14,13 @@
                             </span>
                     <input ng-model="searchControllerModel.loc"
                            g-places-autocomplete
-                           class="form-control margin-searchbox"
+                           class="form-control margin-searchbox auto-size"
                            placeholder="Boston"/>
                 </div>
             </div>
             <div class="col-sm-2 col-md-2">
                 <button ng-click="searchControllerModel.callSearch(searchControllerModel.restname,searchControllerModel.loc)"
-                        class="btn btn-info btn-block">Find</button>
+                        class="btn btn-info btn-block find-btn auto-size">Find</button>
             </div>
 
         </div>
@@ -38,19 +38,19 @@
         <div class="item active">
             <img class="banner1" src="/project/client/images/food_1920x800.jpg" alt="Slide 1" />
             <div class="carousel-caption">
-                <h3>Search favorite food place in your neighborhood</h3>
+                <h3 class="font-s">Search favorite food place in your neighborhood</h3>
             </div>
         </div>
         <div class="item">
             <img class="banner2" src="/project/client/images/taco_1920x800.jpg" alt="Slide 2" />
             <div class="carousel-caption">
-                <h3>Search favorite food place in your neighborhood</h3>
+                <h3 class="font-s">Search favorite food place in your neighborhood</h3>
             </div>
         </div>
         <div class="item">
-            <img class="banner3" src="/project/client/images/banner3.jpg" alt="Slide 3" />
+            <img class="banner3" src="/project-next/client/images/coffee_1920x1080.jpg" alt="Slide 3" />
             <div class="carousel-caption">
-                <h3>Search favorite food place in your neighborhood</h3>
+                <h3 class="font-s">Search favorite food place in your neighborhood</h3>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
     <!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="lead page-header">Popular Food Places near you
+            <h1 class="lead page-header marg-top">Popular Food Places near you
                 <small><i class="fa fa-line-chart fa-lg"></i></small>
             </h1>
         </div>
@@ -81,7 +81,7 @@
                         <img class="img-responsive" ng-src="{{searchControllerModel.popularRestaurants.images[$index]}}"/>
                     </a>
                     <div class="caption">
-                        <p class="lead">{{searchControllerModel.popularRestaurants.names[$index]}}</p>
+                        <p class="lead text-center">{{searchControllerModel.popularRestaurants.names[$index]}}</p>
                     </div>
                 </div>
             </div>
